@@ -1,2 +1,9 @@
 usr/bin
 usr/share/applications/hildon
+usr/share/dbus-1/services
+usr/share/icons/hicolor/16x16/apps
+usr/share/icons/hicolor/22x22/apps
+usr/share/icons/hicolor/32x32/apps
+usr/share/icons/hicolor/48x48/apps
+usr/share/icons/hicolor/64x64/apps
+usr/share/mime/packages
