@@ -7,7 +7,7 @@ Standards-Version: 3.7.2
 
 Package: portabase
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, hildon-application-manager
+Depends: ${shlibs:Depends}, hildon-application-manager
 Description: An easy-to-use personal database application
  PortaBase is a program for conveniently managing one-table database files.
  It is available for many platforms, including Linux, Mac OS X, Windows,
